# deposito_sangiovanni

./: .gitignore  README.md  pyproject.toml
deposito_sangiovanni/: lez1.py  lez1_2.py  lez2_1.py  lez2_2.py  lez2_3.py  notebook.ipynb  notebook1_2.ipynb  notebook2_1.ipynb  notebook2_2.ipynb  notebook2_3.ipynb
deposito_sangiovanni/parte1/: lez1_2.py  lez2_3.py  notebook1_1.ipynb  notebook1_2.ipynb  notebook2_1.ipynb  notebook2_2.ipynb
deposito_sangiovanni/parte2/: embed.py  mainmenu.py  notebook.ipynb  utils.py
